Fix printview for browsers (Issue#2162)
This patch fixes the currently broken view of ticket zoom (when you try to print a ticket). All "read more" tags will be "open" so that you get the full artcle content. The scrollbar is now hidden and you can also print all pages. 

Verified on current Chrome and Firefox. In case this brakes the print overview within the browser, I'll fix that on Monday - promise!

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -1,3 +1,12 @@
+html {
+  height: auto !important;
+}
+
+body, #app, .table-column-head, .fullscreenMessage, .horizontal, .tabsSidebar-holder,
+.ticketZoom-controls {
+  display: block !important;
+}
+
 #app > *:not(.content):not(.active),
 #app > .hide {
   display: none;
@@ -59,4 +68,16 @@
 
 .article-meta .article-meta-key {
   display: none;
+}
+
+.textBubble-content {
+  height: 100% !important;
+}
+
+.no-padding {
+  overflow: visible !important;
+}
+
+.tabsSidebar-tabsSpacer {
+  padding: 0 !important;
 }
